--- a/SkEditorPlus/App.xaml
+++ b/SkEditorPlus/App.xaml
@@ -15,6 +15,8 @@
                 <ResourceDictionary Source="/Styles/TabControlStyle.xaml"/>
                 <ResourceDictionary Source="/Styles/MessageBoxStyle.xaml"/>
                 <ResourceDictionary Source="/Styles/OptionsTabControlStyle.xaml"/>
+                <ResourceDictionary Source="/Styles/MenuStyle.xaml"/>
+                <ResourceDictionary Source="/Styles/ScrollViewerStyle.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/Languages/English.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
