--- a/SkEditorPlus/Styles/SearchPanelStyle.xaml
+++ b/SkEditorPlus/Styles/SearchPanelStyle.xaml
@@ -104,7 +104,7 @@
 								VerticalContentAlignment="Center" 
                                 HorizontalContentAlignment="Center">
                                     <Path Data="F1M54.0573,47.8776L38.1771,31.9974 54.0547,16.1198C55.7604,14.4141 55.7604,11.6511 54.0573,9.94531 52.3516,8.23962 49.5859,8.23962 47.8802,9.94531L32.0026,25.8229 16.1224,9.94531C14.4167,8.23962 11.6511,8.23962 9.94794,9.94531 8.24219,11.6511 8.24219,14.4141 9.94794,16.1198L25.8255,32 9.94794,47.8776C8.24219,49.5834 8.24219,52.3477 9.94794,54.0534 11.6511,55.7572 14.4167,55.7585 16.1224,54.0534L32.0026,38.1745 47.8802,54.0534C49.5859,55.7585 52.3516,55.7572 54.0573,54.0534 55.7604,52.3477 55.763,49.5834 54.0573,47.8776z" 
-								Height="8" Width="8" Stretch="Uniform" Fill="{DynamicResource SecondaryTextBrush}" Margin="0" />
+								Height="8" Width="8" Stretch="Uniform" Fill="#757575" Margin="0" />
                                 </Button>
                             </DockPanel>
                             <DockPanel Margin="0,10,0,0">
