--- a/SkEditorPlus/Windows/PublishWindow.xaml
+++ b/SkEditorPlus/Windows/PublishWindow.xaml
@@ -6,18 +6,22 @@
         xmlns:hc="https://handyorg.github.io/handycontrol"
         xmlns:local="clr-namespace:SkEditorPlus"
         mc:Ignorable="d"
-        Title="{DynamicResource PublishWindowTitle}" Height="300" Width="305" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Closing="OnClosing" KeyUp="OnKey">
+        Title="{DynamicResource PublishWindowTitle}" Height="350" Width="305" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Closing="OnClosing" KeyUp="OnKey">
     <Grid>
 
-        <Button x:Name="PublishButton" Content="{DynamicResource PublishButton}" IsDefault="True" HorizontalAlignment="Left" Width="75" Margin="220,185,0,0" Click="PublishClick" VerticalAlignment="Top"/>
-        <ComboBox x:Name="langComboBox" HorizontalAlignment="Left" Margin="10,99,0,0" VerticalAlignment="Top" Width="138" SelectedIndex="0">
+        <Button x:Name="PublishButton" Content="{DynamicResource PublishButton}" IsDefault="True" HorizontalAlignment="Left" Width="75" Margin="220,224,0,0" Click="PublishClick" VerticalAlignment="Top"/>
+        <ComboBox x:Name="langComboBox" HorizontalAlignment="Left" Margin="10,146,0,0" VerticalAlignment="Top" Width="138" SelectedIndex="0">
             <ComboBoxItem Content="Skript"/>
             <ComboBoxItem Content="YAML"/>
         </ComboBox>
-        <hc:TextBox x:Name="apiTextBox" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="" VerticalAlignment="Top" Width="285" hc:InfoElement.Placeholder="{DynamicResource PasteAPIKeyTextboxPlaceholder}" Margin="0,10,0,0" AutomationProperties.IsRequiredForForm="True" Height="30"/>
-        <hc:TextBox x:Name="urlTextBox" HorizontalAlignment="Center" Margin="0,234,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="285" hc:InfoElement.Placeholder="{DynamicResource PublishResultUrlPlaceholder}" IsReadOnlyCaretVisible="True"/>
-        <CheckBox x:Name="anonymousCheckBox" Background="#FF1C1C1C" Content="{DynamicResource AnonymousCheckbox}" HorizontalAlignment="Left" Margin="10,162,0,0" VerticalAlignment="Top"/>
-        <TextBlock x:Name="helpText" HorizontalAlignment="Center" Margin="0,45,0,0" TextWrapping="Wrap" Text="{DynamicResource PasteAPIKeyTextboxHint}" VerticalAlignment="Top" Width="285" MouseLeftButtonUp="HelpClicked"/>
-        <Button Content="📋" HorizontalAlignment="Left" Margin="262,234,0,0" VerticalAlignment="Top" Width="33" Click="CopyClick"/>
+        <hc:TextBox x:Name="apiTextBox" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="" VerticalAlignment="Top" Width="285" hc:InfoElement.Placeholder="{DynamicResource PasteAPIKeyTextboxPlaceholder}" Margin="0,65,0,0" AutomationProperties.IsRequiredForForm="True" Height="30"/>
+        <hc:TextBox x:Name="urlTextBox" HorizontalAlignment="Center" Margin="0,264,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="285" hc:InfoElement.Placeholder="{DynamicResource PublishResultUrlPlaceholder}" IsReadOnlyCaretVisible="True"/>
+        <CheckBox x:Name="anonymousCheckBox" Background="#FF1C1C1C" Content="{DynamicResource AnonymousCheckbox}" HorizontalAlignment="Left" Margin="10,181,0,0" VerticalAlignment="Top"/>
+        <TextBlock x:Name="helpText" HorizontalAlignment="Center" Margin="0,100,0,0" TextWrapping="Wrap" Text="{DynamicResource PasteAPIKeyTextboxHint}" VerticalAlignment="Top" Width="285" MouseLeftButtonUp="HelpClicked"/>
+        <Button Content="📋" HorizontalAlignment="Left" Margin="262,264,0,0" VerticalAlignment="Top" Width="33" Click="CopyClick" RenderTransformOrigin="0.455,0.235"/>
+        <ComboBox x:Name="websiteComboBox" HorizontalAlignment="Left" Margin="10,20,0,0" VerticalAlignment="Top" Width="138" SelectedIndex="0" SelectionChanged="OnWebsiteChange">
+            <ComboBoxItem Content="Pastebin"/>
+            <ComboBoxItem Content="code.skript.pl"/>
+        </ComboBox>
     </Grid>
 </hc:Window>
